# sports_challenge

./: CMakeLists.txt  client.cpp  positional_inaccuracy_generator.cpp  positional_inaccuracy_generator.hpp  server.cpp  sports_data_generator.cpp  sports_data_generator.hpp
sportsdata/: challenge.pb.cc  challenge.pb.h
